Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1279,7 +1279,11 @@
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 41.12215909090909\tLoss: 8.224\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 46.73295454545455\tLoss: 6.541\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 44.03409090909091\tLoss: 6.947\n",
-      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 36.36363636363637\tLoss: 9.135\n"
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 36.36363636363637\tLoss: 9.135\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 25.994318181818183\tLoss: 12.663\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 18.25284090909091\tLoss: 18.506\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 12.997159090909092\tLoss: 35.969\n",
+      "Coord: [-1.   0.7]\tAcc: 15\tLoss: 99.8035\r"
      ]
     }
    ],
