--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1392,7 +1392,14 @@
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 38.92045454545455\tLoss: 9.19\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 37.71306818181818\tLoss: 9.405\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 31.74715909090909\tLoss: 11.782\n",
-      "Coord: [0.3 0.8]\tAcc: 31\tLoss: 14.795\r"
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 26.207386363636363\tLoss: 15.963\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 21.519886363636363\tLoss: 24.084\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 18.394886363636363\tLoss: 40.485\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 13.849431818181818\tLoss: 82.382\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 15.553977272727273\tLoss: 148.281\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 18.678977272727273\tLoss: 65.4\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 23.650568181818183\tLoss: 30.949\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 29.616477272727273\tLoss: 17.691\n"
      ]
     }
    ],
