Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1283,7 +1283,11 @@
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 25.994318181818183\tLoss: 12.663\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 18.25284090909091\tLoss: 18.506\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 12.997159090909092\tLoss: 35.969\n",
-      "Coord: [-1.   0.7]\tAcc: 15\tLoss: 99.8035\r"
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.991477272727273\tLoss: 77.047\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 16.051136363636363\tLoss: 46.697\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 20.59659090909091\tLoss: 29.337\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 26.5625\tLoss: 17.731\n",
+      "Coord: [-0.2  0.7]\tAcc: 44\tLoss: 13.888\r"
      ]
     }
    ],
