--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -684,7 +684,10 @@
       "\tEpoch: 78\tTrain loss: 0.036\tTrain Acc: 98.88655\n",
       "\tEpoch: 78\tTest loss: 1.792\tTest Acc: 78.685575\n",
       "==========================\n",
-      "Epoch: 79 i : 374 and loss: 0.017 acc: 0.9921875\r"
+      "\tEpoch: 79\tTrain loss: 0.033\tTrain Acc: 98.97455\n",
+      "\tEpoch: 79\tTest loss: 1.754\tTest Acc: 78.965255\n",
+      "==========================\n",
+      "Epoch: 80 i : 9 and loss: 0.004 acc: 1.0218755\r"
      ]
     }
    ],
