Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1287,7 +1287,11 @@
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 16.051136363636363\tLoss: 46.697\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 20.59659090909091\tLoss: 29.337\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 26.5625\tLoss: 17.731\n",
-      "Coord: [-0.2  0.7]\tAcc: 44\tLoss: 13.888\r"
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 33.45170454545455\tLoss: 11.968\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 36.64772727272727\tLoss: 10.211\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 32.10227272727273\tLoss: 11.292\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 24.289772727272727\tLoss: 14.068\n",
+      "Coord: [0.6 0.7]\tAcc: 34\tLoss: 15.848\r"
      ]
     }
    ],
