Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1399,7 +1399,15 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 15.553977272727273\tLoss: 148.281\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 18.678977272727273\tLoss: 65.4\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 23.650568181818183\tLoss: 30.949\n",
-      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 29.616477272727273\tLoss: 17.691\n"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 29.616477272727273\tLoss: 17.691\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 29.616477272727273\tLoss: 15.304\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 25.49715909090909\tLoss: 18.94\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 22.37215909090909\tLoss: 23.521\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 20.3125\tLoss: 30.936\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 16.832386363636363\tLoss: 47.519\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 15.056818181818182\tLoss: 81.459\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.707386363636363\tLoss: 347.327\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.625\tLoss: 154.337\n"
      ]
     }
    ],
