--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1291,7 +1291,11 @@
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 36.64772727272727\tLoss: 10.211\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 32.10227272727273\tLoss: 11.292\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 24.289772727272727\tLoss: 14.068\n",
-      "Coord: [0.6 0.7]\tAcc: 34\tLoss: 15.848\r"
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 17.258522727272727\tLoss: 19.248\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.423295454545455\tLoss: 32.368\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 13.139204545454545\tLoss: 134.949\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 13.849431818181818\tLoss: 83.404\n",
+      "Coord: [-0.7  0.8]\tAcc: 19\tLoss: 71.737\r"
      ]
     }
    ],
