--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1295,7 +1295,10 @@
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.423295454545455\tLoss: 32.368\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 13.139204545454545\tLoss: 134.949\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 13.849431818181818\tLoss: 83.404\n",
-      "Coord: [-0.7  0.8]\tAcc: 19\tLoss: 71.737\r"
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.488636363636363\tLoss: 53.861\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 16.40625\tLoss: 35.381\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 21.09375\tLoss: 23.279\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 27.130681818181817\tLoss: 16.554\n"
      ]
     }
    ],
