--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1407,7 +1407,15 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 16.832386363636363\tLoss: 47.519\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 15.056818181818182\tLoss: 81.459\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.707386363636363\tLoss: 347.327\n",
-      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.625\tLoss: 154.337\n"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.625\tLoss: 154.337\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 17.329545454545453\tLoss: 71.741\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 21.306818181818183\tLoss: 37.227\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 22.017045454545453\tLoss: 26.295\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 20.241477272727273\tLoss: 29.291\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 19.53125\tLoss: 35.784\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 17.826704545454547\tLoss: 43.969\n",
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 16.619318181818183\tLoss: 61.147\n",
+      "Coord: [0.8 1. ]\tAcc: 27\tLoss: 96.9815\r"
      ]
     }
    ],
