Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -687,7 +687,9 @@
       "\tEpoch: 79\tTrain loss: 0.033\tTrain Acc: 98.97455\n",
       "\tEpoch: 79\tTest loss: 1.754\tTest Acc: 78.965255\n",
       "==========================\n",
-      "Epoch: 80 i : 354 and loss: 0.011 acc: 0.9921875\r"
+      "\tEpoch: 80\tTrain loss: 0.026\tTrain Acc: 99.16675\n",
+      "\tEpoch: 80\tTest loss: 1.708\tTest Acc: 78.938755\n",
+      "==========================\n"
      ]
     }
    ],
