Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1298,7 +1298,11 @@
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.488636363636363\tLoss: 53.861\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 16.40625\tLoss: 35.381\n",
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 21.09375\tLoss: 23.279\n",
-      "count: 388\tCoord: [0.  0.8]\t\tAcc: 27.130681818181817\tLoss: 16.554\n"
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 27.130681818181817\tLoss: 16.554\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 28.125\tLoss: 14.823\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 25.071022727272727\tLoss: 16.347\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 16.619318181818183\tLoss: 21.018\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 13.068181818181818\tLoss: 33.232\n"
      ]
     }
    ],
