--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1302,7 +1302,11 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 28.125\tLoss: 14.823\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 25.071022727272727\tLoss: 16.347\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 16.619318181818183\tLoss: 21.018\n",
-      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 13.068181818181818\tLoss: 33.232\n"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 13.068181818181818\tLoss: 33.232\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.15625\tLoss: 66.103\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.215909090909092\tLoss: 147.624\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 12.784090909090908\tLoss: 94.29\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 13.210227272727273\tLoss: 62.853\n"
      ]
     }
    ],
