Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1306,7 +1306,12 @@
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.15625\tLoss: 66.103\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.215909090909092\tLoss: 147.624\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 12.784090909090908\tLoss: 94.29\n",
-      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 13.210227272727273\tLoss: 62.853\n"
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 13.210227272727273\tLoss: 62.853\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 14.630681818181818\tLoss: 43.872\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 17.542613636363637\tLoss: 29.93\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 23.224431818181817\tLoss: 21.459\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 22.37215909090909\tLoss: 20.186\n",
+      "Coord: [0.4 0.9]\tAcc: 31\tLoss: 19.365\r"
      ]
     }
    ],
