--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1311,7 +1311,11 @@
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 17.542613636363637\tLoss: 29.93\n",
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 23.224431818181817\tLoss: 21.459\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 22.37215909090909\tLoss: 20.186\n",
-      "Coord: [0.4 0.9]\tAcc: 31\tLoss: 19.365\r"
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 17.116477272727273\tLoss: 23.433\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 12.215909090909092\tLoss: 36.103\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.232954545454545\tLoss: 69.392\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.789772727272727\tLoss: 265.969\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.642045454545455\tLoss: 165.192\n"
      ]
     }
    ],
