Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1315,7 +1315,11 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 12.215909090909092\tLoss: 36.103\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.232954545454545\tLoss: 69.392\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.789772727272727\tLoss: 265.969\n",
-      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.642045454545455\tLoss: 165.192\n"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.642045454545455\tLoss: 165.192\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 13.210227272727273\tLoss: 105.986\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 12.642045454545455\tLoss: 74.826\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 12.784090909090908\tLoss: 53.464\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 17.045454545454547\tLoss: 36.513\n"
      ]
     }
    ],
