Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1319,7 +1319,12 @@
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 13.210227272727273\tLoss: 105.986\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 12.642045454545455\tLoss: 74.826\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 12.784090909090908\tLoss: 53.464\n",
-      "count: 430\tCoord: [0. 1.]\t\tAcc: 17.045454545454547\tLoss: 36.513\n"
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 17.045454545454547\tLoss: 36.513\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 18.963068181818183\tLoss: 27.735\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 16.548295454545453\tLoss: 27.507\n",
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 11.647727272727273\tLoss: 39.453\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 8.238636363636363\tLoss: 75.031\n",
+      "Coord: [0.9 1. ]\tAcc: 14\tLoss: 94.6259\r"
      ]
     }
    ],
