Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -693,7 +693,8 @@
       "\tEpoch: 81\tTrain loss: 0.02\tTrain Acc: 99.345875\n",
       "\tEpoch: 81\tTest loss: 1.827\tTest Acc: 78.855125\n",
       "==========================\n",
-      "Epoch: 82 i : 335 and loss: 0.001 acc: 1.0921875\r"
+      "\tEpoch: 82\tTrain loss: 0.027\tTrain Acc: 99.12575\n",
+      "Epoch: 82 i : 48 and loss: 2.007 acc: 0.7890625\r"
      ]
     }
    ],
