Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -694,7 +694,9 @@
       "\tEpoch: 81\tTest loss: 1.827\tTest Acc: 78.855125\n",
       "==========================\n",
       "\tEpoch: 82\tTrain loss: 0.027\tTrain Acc: 99.12575\n",
-      "Epoch: 82 i : 48 and loss: 2.007 acc: 0.7890625\r"
+      "\tEpoch: 82\tTest loss: 1.741\tTest Acc: 78.575375\n",
+      "==========================\n",
+      "Epoch: 83 i : 63 and loss: 0.003 acc: 1.0921875\r"
      ]
     }
    ],
