--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -696,7 +696,8 @@
       "\tEpoch: 82\tTrain loss: 0.027\tTrain Acc: 99.12575\n",
       "\tEpoch: 82\tTest loss: 1.741\tTest Acc: 78.575375\n",
       "==========================\n",
-      "Epoch: 83 i : 332 and loss: 0.01 acc: 0.99218755\r"
+      "\tEpoch: 83\tTrain loss: 0.023\tTrain Acc: 99.26455\n",
+      "Epoch: 83 i : 54 and loss: 2.341 acc: 0.7890625\r"
      ]
     }
    ],
