--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -697,7 +697,9 @@
       "\tEpoch: 82\tTest loss: 1.741\tTest Acc: 78.575375\n",
       "==========================\n",
       "\tEpoch: 83\tTrain loss: 0.023\tTrain Acc: 99.26455\n",
-      "Epoch: 83 i : 54 and loss: 2.341 acc: 0.7890625\r"
+      "\tEpoch: 83\tTest loss: 1.884\tTest Acc: 79.077575\n",
+      "==========================\n",
+      "Epoch: 84 i : 66 and loss: 0.097 acc: 0.9687575\r"
      ]
     }
    ],
