Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -699,7 +699,8 @@
       "\tEpoch: 83\tTrain loss: 0.023\tTrain Acc: 99.26455\n",
       "\tEpoch: 83\tTest loss: 1.884\tTest Acc: 79.077575\n",
       "==========================\n",
-      "Epoch: 84 i : 336 and loss: 0.067 acc: 0.9843755\r"
+      "\tEpoch: 84\tTrain loss: 0.036\tTrain Acc: 98.90655\n",
+      "Epoch: 84 i : 62 and loss: 3.031 acc: 0.7656255\r"
      ]
     }
    ],
