Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -700,7 +700,9 @@
       "\tEpoch: 83\tTest loss: 1.884\tTest Acc: 79.077575\n",
       "==========================\n",
       "\tEpoch: 84\tTrain loss: 0.036\tTrain Acc: 98.90655\n",
-      "Epoch: 84 i : 62 and loss: 3.031 acc: 0.7656255\r"
+      "\tEpoch: 84\tTest loss: 1.922\tTest Acc: 78.914375\n",
+      "==========================\n",
+      "Epoch: 85 i : 70 and loss: 0.06 acc: 0.98437525\r"
      ]
     }
    ],
