Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -702,7 +702,8 @@
       "\tEpoch: 84\tTrain loss: 0.036\tTrain Acc: 98.90655\n",
       "\tEpoch: 84\tTest loss: 1.922\tTest Acc: 78.914375\n",
       "==========================\n",
-      "Epoch: 85 i : 339 and loss: 0.041 acc: 0.9843755\r"
+      "\tEpoch: 85\tTrain loss: 0.028\tTrain Acc: 99.11255\n",
+      "Epoch: 85 i : 68 and loss: 1.539 acc: 0.7578125\r"
      ]
     }
    ],
