--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -703,7 +703,9 @@
       "\tEpoch: 84\tTest loss: 1.922\tTest Acc: 78.914375\n",
       "==========================\n",
       "\tEpoch: 85\tTrain loss: 0.028\tTrain Acc: 99.11255\n",
-      "Epoch: 85 i : 68 and loss: 1.539 acc: 0.7578125\r"
+      "\tEpoch: 85\tTest loss: 1.841\tTest Acc: 78.535755\n",
+      "==========================\n",
+      "Epoch: 86 i : 72 and loss: 0.019 acc: 0.9921875\r"
      ]
     }
    ],
