Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -705,7 +705,8 @@
       "\tEpoch: 85\tTrain loss: 0.028\tTrain Acc: 99.11255\n",
       "\tEpoch: 85\tTest loss: 1.841\tTest Acc: 78.535755\n",
       "==========================\n",
-      "Epoch: 86 i : 342 and loss: 0.026 acc: 0.9843755\r"
+      "\tEpoch: 86\tTrain loss: 0.02\tTrain Acc: 99.336575\n",
+      "Epoch: 86 i : 74 and loss: 1.829 acc: 0.7812575\r"
      ]
     }
    ],
