--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -706,7 +706,9 @@
       "\tEpoch: 85\tTest loss: 1.841\tTest Acc: 78.535755\n",
       "==========================\n",
       "\tEpoch: 86\tTrain loss: 0.02\tTrain Acc: 99.336575\n",
-      "Epoch: 86 i : 74 and loss: 1.829 acc: 0.7812575\r"
+      "\tEpoch: 86\tTest loss: 1.748\tTest Acc: 78.730625\n",
+      "==========================\n",
+      "Epoch: 87 i : 75 and loss: 0.027 acc: 0.9765625\r"
      ]
     }
    ],
