Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -708,7 +708,9 @@
       "\tEpoch: 86\tTrain loss: 0.02\tTrain Acc: 99.336575\n",
       "\tEpoch: 86\tTest loss: 1.748\tTest Acc: 78.730625\n",
       "==========================\n",
-      "Epoch: 87 i : 345 and loss: 0.039 acc: 0.9843755\r"
+      "\tEpoch: 87\tTrain loss: 0.025\tTrain Acc: 99.19875\n",
+      "\tEpoch: 87\tTest loss: 1.813\tTest Acc: 79.058755\n",
+      "==========================\n"
      ]
     }
    ],
