Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -710,7 +710,8 @@
       "==========================\n",
       "\tEpoch: 87\tTrain loss: 0.025\tTrain Acc: 99.19875\n",
       "\tEpoch: 87\tTest loss: 1.813\tTest Acc: 79.058755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 88 i : 78 and loss: 0.018 acc: 0.9921875\r"
      ]
     }
    ],
