Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -711,7 +711,9 @@
       "\tEpoch: 87\tTrain loss: 0.025\tTrain Acc: 99.19875\n",
       "\tEpoch: 87\tTest loss: 1.813\tTest Acc: 79.058755\n",
       "==========================\n",
-      "Epoch: 88 i : 349 and loss: 0.024 acc: 0.9843755\r"
+      "\tEpoch: 88\tTrain loss: 0.023\tTrain Acc: 99.25275\n",
+      "\tEpoch: 88\tTest loss: 1.739\tTest Acc: 79.286875\n",
+      "==========================\n"
      ]
     }
    ],
