--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -713,7 +713,8 @@
       "==========================\n",
       "\tEpoch: 88\tTrain loss: 0.023\tTrain Acc: 99.25275\n",
       "\tEpoch: 88\tTest loss: 1.739\tTest Acc: 79.286875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 89 i : 81 and loss: 0.069 acc: 0.9843755\r"
      ]
     }
    ],
