--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -714,7 +714,9 @@
       "\tEpoch: 88\tTrain loss: 0.023\tTrain Acc: 99.25275\n",
       "\tEpoch: 88\tTest loss: 1.739\tTest Acc: 79.286875\n",
       "==========================\n",
-      "Epoch: 89 i : 351 and loss: 0.041 acc: 0.9843755\r"
+      "\tEpoch: 89\tTrain loss: 0.026\tTrain Acc: 99.16655\n",
+      "\tEpoch: 89\tTest loss: 1.839\tTest Acc: 78.341875\n",
+      "==========================\n"
      ]
     }
    ],
