Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -716,7 +716,8 @@
       "==========================\n",
       "\tEpoch: 89\tTrain loss: 0.026\tTrain Acc: 99.16655\n",
       "\tEpoch: 89\tTest loss: 1.839\tTest Acc: 78.341875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 90 i : 84 and loss: 0.039 acc: 0.9843755\r"
      ]
     }
    ],
