Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -717,7 +717,9 @@
       "\tEpoch: 89\tTrain loss: 0.026\tTrain Acc: 99.16655\n",
       "\tEpoch: 89\tTest loss: 1.839\tTest Acc: 78.341875\n",
       "==========================\n",
-      "Epoch: 90 i : 354 and loss: 0.009 acc: 0.9921875\r"
+      "\tEpoch: 90\tTrain loss: 0.031\tTrain Acc: 99.09555\n",
+      "\tEpoch: 90\tTest loss: 1.707\tTest Acc: 78.495555\n",
+      "==========================\n"
      ]
     }
    ],
