Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -719,7 +719,8 @@
       "==========================\n",
       "\tEpoch: 90\tTrain loss: 0.031\tTrain Acc: 99.09555\n",
       "\tEpoch: 90\tTest loss: 1.707\tTest Acc: 78.495555\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 91 i : 87 and loss: 0.094 acc: 0.9843755\r"
      ]
     }
    ],
