Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -720,7 +720,10 @@
       "\tEpoch: 90\tTrain loss: 0.031\tTrain Acc: 99.09555\n",
       "\tEpoch: 90\tTest loss: 1.707\tTest Acc: 78.495555\n",
       "==========================\n",
-      "Epoch: 91 i : 357 and loss: 0.089 acc: 0.9921875\r"
+      "\tEpoch: 91\tTrain loss: 0.027\tTrain Acc: 99.13625\n",
+      "\tEpoch: 91\tTest loss: 1.873\tTest Acc: 78.773755\n",
+      "==========================\n",
+      "Epoch: 92 i : 1 and loss: 0.003 acc: 1.0\r"
      ]
     }
    ],
