Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -723,7 +723,10 @@
       "\tEpoch: 91\tTrain loss: 0.027\tTrain Acc: 99.13625\n",
       "\tEpoch: 91\tTest loss: 1.873\tTest Acc: 78.773755\n",
       "==========================\n",
-      "Epoch: 92 i : 361 and loss: 0.0 acc: 1.099218755\r"
+      "\tEpoch: 92\tTrain loss: 0.025\tTrain Acc: 99.19875\n",
+      "\tEpoch: 92\tTest loss: 1.833\tTest Acc: 78.955755\n",
+      "==========================\n",
+      "Epoch: 93 i : 4 and loss: 0.001 acc: 1.0921875\r"
      ]
     }
    ],
