Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -726,7 +726,10 @@
       "\tEpoch: 92\tTrain loss: 0.025\tTrain Acc: 99.19875\n",
       "\tEpoch: 92\tTest loss: 1.833\tTest Acc: 78.955755\n",
       "==========================\n",
-      "Epoch: 93 i : 364 and loss: 0.001 acc: 1.0218755\r"
+      "\tEpoch: 93\tTrain loss: 0.024\tTrain Acc: 99.21255\n",
+      "\tEpoch: 93\tTest loss: 1.897\tTest Acc: 78.655875\n",
+      "==========================\n",
+      "Epoch: 94 i : 7 and loss: 0.012 acc: 0.9921875\r"
      ]
     }
    ],
