Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -729,7 +729,10 @@
       "\tEpoch: 93\tTrain loss: 0.024\tTrain Acc: 99.21255\n",
       "\tEpoch: 93\tTest loss: 1.897\tTest Acc: 78.655875\n",
       "==========================\n",
-      "Epoch: 94 i : 366 and loss: 0.024 acc: 0.9843755\r"
+      "\tEpoch: 94\tTrain loss: 0.021\tTrain Acc: 99.32875\n",
+      "\tEpoch: 94\tTest loss: 1.786\tTest Acc: 78.668755\n",
+      "==========================\n",
+      "Epoch: 95 i : 10 and loss: 0.043 acc: 0.9921875\r"
      ]
     }
    ],
