Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -732,7 +732,7 @@
       "\tEpoch: 94\tTrain loss: 0.021\tTrain Acc: 99.32875\n",
       "\tEpoch: 94\tTest loss: 1.786\tTest Acc: 78.668755\n",
       "==========================\n",
-      "Epoch: 95 i : 100 and loss: 0.009 acc: 1.065625\r"
+      "Epoch: 95 i : 190 and loss: 0.006 acc: 1.0921875\r"
      ]
     }
    ],
