--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -732,7 +732,10 @@
       "\tEpoch: 94\tTrain loss: 0.021\tTrain Acc: 99.32875\n",
       "\tEpoch: 94\tTest loss: 1.786\tTest Acc: 78.668755\n",
       "==========================\n",
-      "Epoch: 95 i : 370 and loss: 0.002 acc: 1.0921875\r"
+      "\tEpoch: 95\tTrain loss: 0.024\tTrain Acc: 99.23255\n",
+      "\tEpoch: 95\tTest loss: 1.784\tTest Acc: 79.250625\n",
+      "==========================\n",
+      "Epoch: 96 i : 13 and loss: 0.002 acc: 1.0437575\r"
      ]
     }
    ],
