Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -735,7 +735,10 @@
       "\tEpoch: 95\tTrain loss: 0.024\tTrain Acc: 99.23255\n",
       "\tEpoch: 95\tTest loss: 1.784\tTest Acc: 79.250625\n",
       "==========================\n",
-      "Epoch: 96 i : 373 and loss: 0.004 acc: 1.0765625\r"
+      "\tEpoch: 96\tTrain loss: 0.031\tTrain Acc: 99.04875\n",
+      "\tEpoch: 96\tTest loss: 1.708\tTest Acc: 78.737575\n",
+      "==========================\n",
+      "Epoch: 97 i : 16 and loss: 0.065 acc: 0.9921875\r"
      ]
     }
    ],
