Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -738,7 +738,10 @@
       "\tEpoch: 96\tTrain loss: 0.031\tTrain Acc: 99.04875\n",
       "\tEpoch: 96\tTest loss: 1.708\tTest Acc: 78.737575\n",
       "==========================\n",
-      "Epoch: 97 i : 376 and loss: 0.007 acc: 0.9921875\r"
+      "\tEpoch: 97\tTrain loss: 0.022\tTrain Acc: 99.29255\n",
+      "\tEpoch: 97\tTest loss: 1.861\tTest Acc: 79.344375\n",
+      "==========================\n",
+      "Epoch: 98 i : 20 and loss: 0.037 acc: 0.9843755\r"
      ]
     }
    ],
