Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -741,7 +741,10 @@
       "\tEpoch: 97\tTrain loss: 0.022\tTrain Acc: 99.29255\n",
       "\tEpoch: 97\tTest loss: 1.861\tTest Acc: 79.344375\n",
       "==========================\n",
-      "Epoch: 98 i : 380 and loss: 0.025 acc: 0.9921875\r"
+      "\tEpoch: 98\tTrain loss: 0.02\tTrain Acc: 99.355875\n",
+      "\tEpoch: 98\tTest loss: 1.903\tTest Acc: 79.023755\n",
+      "==========================\n",
+      "Epoch: 99 i : 23 and loss: 0.02 acc: 0.99218755\r"
      ]
     }
    ],
