Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1173,7 +1173,17 @@
      "start_time": "2019-05-03T23:55:46.923Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 13.28125\tLoss: 50.702\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 13.352272727272727\tLoss: 45.209\n",
+      "Coord: [-0.6 -1. ]\tAcc: 22\tLoss: 41.632\r"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
