--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1180,7 +1180,10 @@
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 13.28125\tLoss: 50.702\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 13.352272727272727\tLoss: 45.209\n",
-      "Coord: [-0.6 -1. ]\tAcc: 22\tLoss: 41.632\r"
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 13.494318181818182\tLoss: 42.166\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 16.193181818181817\tLoss: 37.866\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 18.039772727272727\tLoss: 32.554\n",
+      "Coord: [-0.1 -1. ]\tAcc: 18\tLoss: 31.889\r"
      ]
     }
    ],
