--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1183,7 +1183,9 @@
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 13.494318181818182\tLoss: 42.166\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 16.193181818181817\tLoss: 37.866\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 18.039772727272727\tLoss: 32.554\n",
-      "Coord: [-0.1 -1. ]\tAcc: 18\tLoss: 31.889\r"
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 16.974431818181817\tLoss: 29.464\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 15.625\tLoss: 29.47\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 14.985795454545455\tLoss: 32.642\n"
      ]
     }
    ],
