Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1185,7 +1185,10 @@
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 18.039772727272727\tLoss: 32.554\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 16.974431818181817\tLoss: 29.464\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 15.625\tLoss: 29.47\n",
-      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 14.985795454545455\tLoss: 32.642\n"
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 14.985795454545455\tLoss: 32.642\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 14.488636363636363\tLoss: 38.449\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.423295454545455\tLoss: 46.664\n",
+      "Coord: [ 0.9 -1. ]\tAcc: 9\tLoss: 57.4669\r"
      ]
     }
    ],
