--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1188,7 +1188,9 @@
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 14.985795454545455\tLoss: 32.642\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 14.488636363636363\tLoss: 38.449\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.423295454545455\tLoss: 46.664\n",
-      "Coord: [ 0.9 -1. ]\tAcc: 9\tLoss: 57.4669\r"
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 11.150568181818182\tLoss: 55.433\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.778409090909092\tLoss: 40.672\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 15.482954545454545\tLoss: 35.876\n"
      ]
     }
    ],
