--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1190,7 +1190,10 @@
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 13.423295454545455\tLoss: 46.664\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 11.150568181818182\tLoss: 55.433\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 13.778409090909092\tLoss: 40.672\n",
-      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 15.482954545454545\tLoss: 35.876\n"
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 15.482954545454545\tLoss: 35.876\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 18.75\tLoss: 31.41\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 21.59090909090909\tLoss: 26.888\n",
+      "Coord: [-0.2 -0.9]\tAcc: 23\tLoss: 26.408\r"
      ]
     }
    ],
