--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1193,7 +1193,9 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 15.482954545454545\tLoss: 35.876\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 18.75\tLoss: 31.41\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 21.59090909090909\tLoss: 26.888\n",
-      "Coord: [-0.2 -0.9]\tAcc: 23\tLoss: 26.408\r"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 23.082386363636363\tLoss: 22.705\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.37215909090909\tLoss: 20.864\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.454545454545453\tLoss: 21.801\n"
      ]
     }
    ],
