--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1195,7 +1195,10 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 21.59090909090909\tLoss: 26.888\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 23.082386363636363\tLoss: 22.705\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.37215909090909\tLoss: 20.864\n",
-      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.454545454545453\tLoss: 21.801\n"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.454545454545453\tLoss: 21.801\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 18.394886363636363\tLoss: 25.623\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 16.619318181818183\tLoss: 34.0\n",
+      "Coord: [ 0.9 -0.9]\tAcc: 21\tLoss: 38.874\r"
      ]
     }
    ],
