Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1198,7 +1198,10 @@
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 20.454545454545453\tLoss: 21.801\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 18.394886363636363\tLoss: 25.623\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 16.619318181818183\tLoss: 34.0\n",
-      "Coord: [ 0.9 -0.9]\tAcc: 21\tLoss: 38.874\r"
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 13.352272727272727\tLoss: 44.002\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 12.855113636363637\tLoss: 39.504\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 16.832386363636363\tLoss: 31.148\n",
+      "Coord: [-0.7 -0.8]\tAcc: 26\tLoss: 29.857\r"
      ]
     }
    ],
