Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1201,7 +1201,9 @@
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 13.352272727272727\tLoss: 44.002\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 12.855113636363637\tLoss: 39.504\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 16.832386363636363\tLoss: 31.148\n",
-      "Coord: [-0.7 -0.8]\tAcc: 26\tLoss: 29.857\r"
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 22.017045454545453\tLoss: 26.114\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 26.420454545454547\tLoss: 21.708\n",
+      "Coord: [-0.2 -0.8]\tAcc: 33\tLoss: 19.204\r"
      ]
     }
    ],
