Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1203,7 +1203,10 @@
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 16.832386363636363\tLoss: 31.148\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 22.017045454545453\tLoss: 26.114\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 26.420454545454547\tLoss: 21.708\n",
-      "Coord: [-0.2 -0.8]\tAcc: 33\tLoss: 19.204\r"
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.835227272727273\tLoss: 17.678\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 32.31534090909091\tLoss: 14.866\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 29.474431818181817\tLoss: 14.502\n",
+      "Coord: [ 0.3 -0.8]\tAcc: 34\tLoss: 15.995\r"
      ]
     }
    ],
