--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1206,7 +1206,9 @@
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.835227272727273\tLoss: 17.678\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 32.31534090909091\tLoss: 14.866\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 29.474431818181817\tLoss: 14.502\n",
-      "Coord: [ 0.3 -0.8]\tAcc: 34\tLoss: 15.995\r"
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 25.78125\tLoss: 16.506\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 21.732954545454547\tLoss: 22.515\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 17.96875\tLoss: 32.595\n"
      ]
     }
    ],
