Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1208,7 +1208,10 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 29.474431818181817\tLoss: 14.502\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 25.78125\tLoss: 16.506\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 21.732954545454547\tLoss: 22.515\n",
-      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 17.96875\tLoss: 32.595\n"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 17.96875\tLoss: 32.595\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 14.204545454545455\tLoss: 43.136\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 16.761363636363637\tLoss: 29.406\n",
+      "Coord: [-0.8 -0.7]\tAcc: 20\tLoss: 26.261\r"
      ]
     }
    ],
