Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1211,7 +1211,9 @@
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 17.96875\tLoss: 32.595\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 14.204545454545455\tLoss: 43.136\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 16.761363636363637\tLoss: 29.406\n",
-      "Coord: [-0.8 -0.7]\tAcc: 20\tLoss: 26.261\r"
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 22.727272727272727\tLoss: 22.185\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 28.480113636363637\tLoss: 17.535\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.80113636363637\tLoss: 13.808\n"
      ]
     }
    ],
