Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1213,7 +1213,10 @@
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 16.761363636363637\tLoss: 29.406\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 22.727272727272727\tLoss: 22.185\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 28.480113636363637\tLoss: 17.535\n",
-      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.80113636363637\tLoss: 13.808\n"
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.80113636363637\tLoss: 13.808\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 40.34090909090909\tLoss: 10.964\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 41.69034090909091\tLoss: 9.222\n",
+      "Coord: [ 0.2 -0.7]\tAcc: 41\tLoss: 10.342\r"
      ]
     }
    ],
