--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1216,7 +1216,10 @@
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 34.80113636363637\tLoss: 13.808\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 40.34090909090909\tLoss: 10.964\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 41.69034090909091\tLoss: 9.222\n",
-      "Coord: [ 0.2 -0.7]\tAcc: 41\tLoss: 10.342\r"
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 35.51136363636363\tLoss: 10.02\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 29.474431818181817\tLoss: 13.537\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 23.863636363636363\tLoss: 21.773\n",
+      "Coord: [ 0.8 -0.7]\tAcc: 31\tLoss: 22.822\r"
      ]
     }
    ],
