Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1219,7 +1219,9 @@
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 35.51136363636363\tLoss: 10.02\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 29.474431818181817\tLoss: 13.537\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 23.863636363636363\tLoss: 21.773\n",
-      "Coord: [ 0.8 -0.7]\tAcc: 31\tLoss: 22.822\r"
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 18.46590909090909\tLoss: 32.722\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 15.198863636363637\tLoss: 31.162\n",
+      "Coord: [-0.8 -0.6]\tAcc: 26\tLoss: 20.704\r"
      ]
     }
    ],
