Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1221,7 +1221,10 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 23.863636363636363\tLoss: 21.773\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 18.46590909090909\tLoss: 32.722\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 15.198863636363637\tLoss: 31.162\n",
-      "Coord: [-0.8 -0.6]\tAcc: 26\tLoss: 20.704\r"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 23.15340909090909\tLoss: 20.166\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 31.107954545454547\tLoss: 14.418\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 39.77272727272727\tLoss: 10.668\n",
+      "Coord: [-0.3 -0.6]\tAcc: 56\tLoss: 10.269\r"
      ]
     }
    ],
