Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1224,7 +1224,9 @@
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 23.15340909090909\tLoss: 20.166\n",
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 31.107954545454547\tLoss: 14.418\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 39.77272727272727\tLoss: 10.668\n",
-      "Coord: [-0.3 -0.6]\tAcc: 56\tLoss: 10.269\r"
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 46.80397727272727\tLoss: 7.96\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 52.55681818181818\tLoss: 5.974\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.98863636363637\tLoss: 5.631\n"
      ]
     }
    ],
