Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1226,7 +1226,10 @@
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 39.77272727272727\tLoss: 10.668\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 46.80397727272727\tLoss: 7.96\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 52.55681818181818\tLoss: 5.974\n",
-      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.98863636363637\tLoss: 5.631\n"
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.98863636363637\tLoss: 5.631\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 42.54261363636363\tLoss: 7.35\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 31.178977272727273\tLoss: 12.941\n",
+      "Coord: [ 0.7 -0.6]\tAcc: 34\tLoss: 18.885\r"
      ]
     }
    ],
