--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1229,7 +1229,9 @@
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 51.98863636363637\tLoss: 5.631\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 42.54261363636363\tLoss: 7.35\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 31.178977272727273\tLoss: 12.941\n",
-      "Coord: [ 0.7 -0.6]\tAcc: 34\tLoss: 18.885\r"
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 24.21875\tLoss: 22.794\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 19.176136363636363\tLoss: 34.296\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 21.661931818181817\tLoss: 21.138\n"
      ]
     }
    ],
