--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1231,7 +1231,10 @@
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 31.178977272727273\tLoss: 12.941\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 24.21875\tLoss: 22.794\n",
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 19.176136363636363\tLoss: 34.296\n",
-      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 21.661931818181817\tLoss: 21.138\n"
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 21.661931818181817\tLoss: 21.138\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.818181818181817\tLoss: 12.81\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 44.03409090909091\tLoss: 8.431\n",
+      "Coord: [-0.4 -0.5]\tAcc: 61\tLoss: 6.546\r"
      ]
     }
    ],
