--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1234,7 +1234,9 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 21.661931818181817\tLoss: 21.138\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 31.818181818181817\tLoss: 12.81\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 44.03409090909091\tLoss: 8.431\n",
-      "Coord: [-0.4 -0.5]\tAcc: 61\tLoss: 6.546\r"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 54.61647727272727\tLoss: 5.742\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 62.42897727272727\tLoss: 3.818\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.11647727272727\tLoss: 3.015\n"
      ]
     }
    ],
