Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1236,7 +1236,10 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 44.03409090909091\tLoss: 8.431\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 54.61647727272727\tLoss: 5.742\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 62.42897727272727\tLoss: 3.818\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.11647727272727\tLoss: 3.015\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.11647727272727\tLoss: 3.015\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 60.9375\tLoss: 3.636\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 47.58522727272727\tLoss: 6.72\n",
+      "Coord: [ 0.7 -0.5]\tAcc: 40\tLoss: 12.548\r"
      ]
     }
    ],
