Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1239,7 +1239,10 @@
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 67.11647727272727\tLoss: 3.015\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 60.9375\tLoss: 3.636\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 47.58522727272727\tLoss: 6.72\n",
-      "Coord: [ 0.7 -0.5]\tAcc: 40\tLoss: 12.548\r"
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 31.605113636363637\tLoss: 14.264\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 23.4375\tLoss: 25.294\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 21.235795454545453\tLoss: 25.209\n",
+      "Coord: [-0.9 -0.4]\tAcc: 24\tLoss: 19.411\r"
      ]
     }
    ],
