--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1242,7 +1242,9 @@
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 31.605113636363637\tLoss: 14.264\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 23.4375\tLoss: 25.294\n",
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 21.235795454545453\tLoss: 25.209\n",
-      "Coord: [-0.9 -0.4]\tAcc: 24\tLoss: 19.411\r"
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 30.96590909090909\tLoss: 13.483\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.316\n",
+      "Coord: [-0.4 -0.4]\tAcc: 75\tLoss: 4.538\r"
      ]
     }
    ],
