--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1244,7 +1244,10 @@
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 21.235795454545453\tLoss: 25.209\n",
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 30.96590909090909\tLoss: 13.483\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.316\n",
-      "Coord: [-0.4 -0.4]\tAcc: 75\tLoss: 4.538\r"
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 59.375\tLoss: 4.43\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 69.95738636363636\tLoss: 2.481\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.05397727272727\tLoss: 1.553\n",
+      "Coord: [ 0.1 -0.4]\tAcc: 102\tLoss: 1.637\r"
      ]
     }
    ],
