--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1247,7 +1247,9 @@
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 59.375\tLoss: 4.43\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 69.95738636363636\tLoss: 2.481\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.05397727272727\tLoss: 1.553\n",
-      "Coord: [ 0.1 -0.4]\tAcc: 102\tLoss: 1.637\r"
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 77.20170454545455\tLoss: 1.615\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 65.9090909090909\tLoss: 3.004\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.61\n"
      ]
     }
    ],
