Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1249,7 +1249,10 @@
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 78.05397727272727\tLoss: 1.553\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 77.20170454545455\tLoss: 1.615\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 65.9090909090909\tLoss: 3.004\n",
-      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.61\n"
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.61\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 29.97159090909091\tLoss: 16.755\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 21.59090909090909\tLoss: 28.613\n",
+      "Coord: [-1.  -0.3]\tAcc: 31\tLoss: 22.919\r"
      ]
     }
    ],
