Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1252,7 +1252,9 @@
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 45.09943181818182\tLoss: 7.61\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 29.97159090909091\tLoss: 16.755\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 21.59090909090909\tLoss: 28.613\n",
-      "Coord: [-1.  -0.3]\tAcc: 31\tLoss: 22.919\r"
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 27.272727272727273\tLoss: 16.679\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 42.82670454545455\tLoss: 7.984\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 60.9375\tLoss: 4.055\n"
      ]
     }
    ],
