Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1254,7 +1254,10 @@
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 21.59090909090909\tLoss: 28.613\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 27.272727272727273\tLoss: 16.679\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 42.82670454545455\tLoss: 7.984\n",
-      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 60.9375\tLoss: 4.055\n"
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 60.9375\tLoss: 4.055\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 74.7159090909091\tLoss: 1.836\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 85.9375\tLoss: 0.786\n",
+      "Coord: [ 0.  -0.3]\tAcc: 113\tLoss: 0.645\r"
      ]
     }
    ],
