Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1257,7 +1257,10 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 60.9375\tLoss: 4.055\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 74.7159090909091\tLoss: 1.836\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 85.9375\tLoss: 0.786\n",
-      "Coord: [ 0.  -0.3]\tAcc: 113\tLoss: 0.645\r"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 88.5653409090909\tLoss: 0.643\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 81.7471590909091\tLoss: 1.174\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 61.50568181818182\tLoss: 3.554\n",
+      "Coord: [ 0.6 -0.3]\tAcc: 68\tLoss: 5.698\r"
      ]
     }
    ],
