Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1260,7 +1260,9 @@
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 88.5653409090909\tLoss: 0.643\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 81.7471590909091\tLoss: 1.174\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 61.50568181818182\tLoss: 3.554\n",
-      "Coord: [ 0.6 -0.3]\tAcc: 68\tLoss: 5.698\r"
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 40.76704545454545\tLoss: 9.887\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 27.62784090909091\tLoss: 20.043\n",
+      "Coord: [-1.  -0.2]\tAcc: 26\tLoss: 21.488\r"
      ]
     }
    ],
