Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1262,7 +1262,10 @@
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 61.50568181818182\tLoss: 3.554\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 40.76704545454545\tLoss: 9.887\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 27.62784090909091\tLoss: 20.043\n",
-      "Coord: [-1.  -0.2]\tAcc: 26\tLoss: 21.488\r"
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 22.869318181818183\tLoss: 23.177\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 37.35795454545455\tLoss: 10.67\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 57.31534090909091\tLoss: 4.783\n",
+      "Coord: [-0.5 -0.2]\tAcc: 83\tLoss: 3.228\r"
      ]
     }
    ],
