Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1265,7 +1265,9 @@
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 22.869318181818183\tLoss: 23.177\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 37.35795454545455\tLoss: 10.67\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 57.31534090909091\tLoss: 4.783\n",
-      "Coord: [-0.5 -0.2]\tAcc: 83\tLoss: 3.228\r"
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 75.63920454545455\tLoss: 1.94\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 88.84943181818181\tLoss: 0.579\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.3125\tLoss: 0.211\n"
      ]
     }
    ],
