Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1267,7 +1267,10 @@
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 57.31534090909091\tLoss: 4.783\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 75.63920454545455\tLoss: 1.94\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 88.84943181818181\tLoss: 0.579\n",
-      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.3125\tLoss: 0.211\n"
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.3125\tLoss: 0.211\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 91.6903409090909\tLoss: 0.389\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 79.11931818181819\tLoss: 1.417\n",
+      "Coord: [ 0.5 -0.2]\tAcc: 87\tLoss: 3.231\r"
      ]
     }
    ],
