--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1270,7 +1270,9 @@
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.3125\tLoss: 0.211\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 91.6903409090909\tLoss: 0.389\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 79.11931818181819\tLoss: 1.417\n",
-      "Coord: [ 0.5 -0.2]\tAcc: 87\tLoss: 3.231\r"
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 55.53977272727273\tLoss: 5.157\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 36.22159090909091\tLoss: 13.119\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.786931818181817\tLoss: 23.874\n"
      ]
     }
    ],
