Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1272,7 +1272,10 @@
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 79.11931818181819\tLoss: 1.417\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 55.53977272727273\tLoss: 5.157\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 36.22159090909091\tLoss: 13.119\n",
-      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.786931818181817\tLoss: 23.874\n"
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.786931818181817\tLoss: 23.874\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 29.40340909090909\tLoss: 16.027\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 48.15340909090909\tLoss: 6.903\n",
+      "Coord: [-0.6 -0.1]\tAcc: 80\tLoss: 4.211\r"
      ]
     }
    ],
