Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1275,7 +1275,10 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.786931818181817\tLoss: 23.874\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 29.40340909090909\tLoss: 16.027\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 48.15340909090909\tLoss: 6.903\n",
-      "Coord: [-0.6 -0.1]\tAcc: 80\tLoss: 4.211\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 67.75568181818181\tLoss: 2.965\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 86.57670454545455\tLoss: 0.78\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.73295454545455\tLoss: 0.129\n",
+      "Coord: [ 0.  -0.1]\tAcc: 128\tLoss: 0.007\r"
      ]
     }
    ],
