Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1278,7 +1278,9 @@
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 67.75568181818181\tLoss: 2.965\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 86.57670454545455\tLoss: 0.78\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.73295454545455\tLoss: 0.129\n",
-      "Coord: [ 0.  -0.1]\tAcc: 128\tLoss: 0.007\r"
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.72727272727273\tLoss: 0.088\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 90.19886363636364\tLoss: 0.455\n",
+      "Coord: [ 0.5 -0.1]\tAcc: 90\tLoss: 2.6949\r"
      ]
     }
    ],
