--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1280,7 +1280,10 @@
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.73295454545455\tLoss: 0.129\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.72727272727273\tLoss: 0.088\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 90.19886363636364\tLoss: 0.455\n",
-      "Coord: [ 0.5 -0.1]\tAcc: 90\tLoss: 2.6949\r"
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 70.17045454545455\tLoss: 2.427\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 47.23011363636363\tLoss: 7.8\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 31.392045454545453\tLoss: 16.906\n",
+      "Coord: [ 1.  -0.1]\tAcc: 28\tLoss: 23.588\r"
      ]
     }
    ],
