Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1283,7 +1283,9 @@
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 70.17045454545455\tLoss: 2.427\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 47.23011363636363\tLoss: 7.8\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 31.392045454545453\tLoss: 16.906\n",
-      "Coord: [ 1.  -0.1]\tAcc: 28\tLoss: 23.588\r"
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 22.798295454545453\tLoss: 24.944\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 36.22159090909091\tLoss: 11.361\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 57.45738636363637\tLoss: 5.032\n"
      ]
     }
    ],
