Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1285,7 +1285,10 @@
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 31.392045454545453\tLoss: 16.906\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 22.798295454545453\tLoss: 24.944\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 36.22159090909091\tLoss: 11.361\n",
-      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 57.45738636363637\tLoss: 5.032\n"
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 57.45738636363637\tLoss: 5.032\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 78.6221590909091\tLoss: 1.698\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 93.60795454545455\tLoss: 0.26\n",
+      "Coord: [-0.1  0. ]\tAcc: 124\tLoss: 0.087\r"
      ]
     }
    ],
