Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1288,7 +1288,9 @@
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 57.45738636363637\tLoss: 5.032\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 78.6221590909091\tLoss: 1.698\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 93.60795454545455\tLoss: 0.26\n",
-      "Coord: [-0.1  0. ]\tAcc: 124\tLoss: 0.087\r"
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.66761363636364\tLoss: 0.152\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 83.23863636363636\tLoss: 1.041\n"
      ]
     }
    ],
