--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1290,7 +1290,10 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 93.60795454545455\tLoss: 0.26\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.66761363636364\tLoss: 0.152\n",
-      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 83.23863636363636\tLoss: 1.041\n"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 83.23863636363636\tLoss: 1.041\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 60.36931818181818\tLoss: 4.461\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 39.0625\tLoss: 11.288\n",
+      "Coord: [0.9 0. ]\tAcc: 37\tLoss: 16.528\r"
      ]
     }
    ],
