--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1293,7 +1293,10 @@
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 83.23863636363636\tLoss: 1.041\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 60.36931818181818\tLoss: 4.461\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 39.0625\tLoss: 11.288\n",
-      "Coord: [0.9 0. ]\tAcc: 37\tLoss: 16.528\r"
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 26.06534090909091\tLoss: 21.107\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.769886363636363\tLoss: 18.352\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 44.24715909090909\tLoss: 8.712\n",
+      "Coord: [-0.6  0.1]\tAcc: 69\tLoss: 5.265\r"
      ]
     }
    ],
