--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1296,7 +1296,9 @@
       "count: 230\tCoord: [1. 0.]\t\tAcc: 26.06534090909091\tLoss: 21.107\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.769886363636363\tLoss: 18.352\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 44.24715909090909\tLoss: 8.712\n",
-      "Coord: [-0.6  0.1]\tAcc: 69\tLoss: 5.265\r"
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 64.20454545454545\tLoss: 3.753\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 84.8721590909091\tLoss: 0.946\n",
+      "Coord: [-0.1  0.1]\tAcc: 123\tLoss: 0.187\r"
      ]
     }
    ],
